base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storycover
  labels:
    app: storycover
spec:
  type: ClusterIP
  selector:
    app: storycover
  ports:
    - name: http
      port: 80
      targetPort: 8080
